# adapters

./: Cargo.toml
crates/adapter-aws/: Cargo.toml
crates/adapter-aws/src/: auth.rs  lib.rs  s3.rs
crates/adapter-azure/: Cargo.toml
crates/adapter-azure/src/: lib.rs
crates/adapter-core/: Cargo.toml
crates/adapter-core/src/: compute.rs  error.rs  lib.rs  queue.rs  storage.rs  types.rs
crates/adapter-gcp/: Cargo.toml
crates/adapter-gcp/src/: gcs.rs  lib.rs
